force-app/main/default/objects/Item_Requerido__c/Item_Requerido__c.object-meta.xml
<CustomObject>
    <label>Item Requerido</label>
    <nameField>
        <displayFormat>Item{0000}</displayFormat>
        <label>Nome de Item Requerido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens Requeridos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>