force-app/main/default/objects/Item_Requerido__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMPRA PRA ESTOQUE</fullName>
            </value>
            <value>
                <fullName>CONSUMO ASSISTENCIA</fullName>
            </value>
            <value>
                <fullName>COPA/ COZINHA</fullName>
            </value>
            <value>
                <fullName>INFORMÁTICA</fullName>
            </value>
            <value>
                <fullName>LIMPEZA/ HIGIENE/ EPI</fullName>
            </value>
            <value>
                <fullName>MANUTENÇÃO DE FROTA</fullName>
            </value>
            <value>
                <fullName>MANUTENÇÃO PREDIAL</fullName>
            </value>
            <value>
                <fullName>MOVEIS</fullName>
            </value>
            <value>
                <fullName>PAPELARIA</fullName>
            </value>
            <value>
                <fullName>RESSARCIMENTO DE TERCEITOS</fullName>
            </value>
            <value>
                <fullName>SERVIÇO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>