force-app/main/default/objects/Item_Requerido__c/fields/COD_Hospcom__c.field-meta.xml
<CustomField>
    <fullName>COD_Hospcom__c</fullName>
    <formula>Produto__r.Cod_Hospcom_c__c</formula>
    <label>Cod. Hospcom</label>
    <type>Text</type>
</CustomField>