force-app/main/default/objects/Item_Requerido__c/fields/Controla_Lote_S_rie__c.field-meta.xml
<CustomField>
    <fullName>Controla_Lote_S_rie__c</fullName>
    <formula>TEXT(Produto__r.Controla_Lote_S_rie__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Controla Lote / Série</label>
    <type>Text</type>
</CustomField>