force-app/main/default/objects/Item_Requerido__c/fields/Descri_o_do_Item__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_do_Item__c</fullName>
    <label>Descrição do Item</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>