force-app/main/default/objects/Item_Requerido__c/fields/Fonte_do_Produto__c.field-meta.xml
<CustomField>
    <fullName>Fonte_do_Produto__c</fullName>
    <formula>TEXT(Produto__r.Fonte_do_Produto__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fonte do Produto</label>
    <type>Text</type>
</CustomField>