force-app/main/default/objects/Item_Requerido__c/fields/I_I__c.field-meta.xml
<CustomField>
    <fullName>I_I__c</fullName>
    <formula>Produto__r.I_I__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I.I</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>