force-app/main/default/objects/Item_Requerido__c/fields/NCM_do_Produto__c.field-meta.xml
<CustomField>
    <fullName>NCM_do_Produto__c</fullName>
    <formula>Produto__r.NCM_do_Produto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCM do Produto</label>
    <type>Text</type>
</CustomField>