force-app/main/default/objects/Item_Requerido__c/fields/Num_Anvisa__c.field-meta.xml
<CustomField>
    <fullName>Num_Anvisa__c</fullName>
    <formula>Produto__r.Numero_Anvisa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num. Anvisa</label>
    <type>Text</type>
</CustomField>