force-app/main/default/objects/Item_Requerido__c/fields/PIS__c.field-meta.xml
<CustomField>
    <fullName>PIS__c</fullName>
    <formula>Produto__r.PIS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>