force-app/main/default/objects/Item_Requerido__c/fields/PN_Mindaray__c.field-meta.xml
<CustomField>
    <fullName>PN_Mindaray__c</fullName>
    <label>P/N Mindaray</label>
    <type>TextArea</type>
</CustomField>