force-app/main/default/objects/Item_Requerido__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Caso não encontre, solicite o cadastro em Meu Sales -&gt; Solicitação de Cadastro</inlineHelpText>
    <label>Produto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <infoMessage>O produto tem que ser um produto ativo</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens Requeridos</relationshipLabel>
    <relationshipName>Itens_Requeridos</relationshipName>
    <type>Lookup</type>
</CustomField>