force-app/main/default/objects/Item_Requerido__c/fields/Requisi_o_Interna_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Requisi_o_Interna_Relacionada__c</fullName>
    <label>Requisição Interna Relacionada</label>
    <referenceTo>Requisi_o_Interna__c</referenceTo>
    <relationshipLabel>Itens Requeridos</relationshipLabel>
    <relationshipName>Itens_Requeridos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>