force-app/main/default/objects/Item_Requerido__c/fields/Status_do_Item__c.field-meta.xml
<CustomField>
    <fullName>Status_do_Item__c</fullName>
    <label>Status do Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOVO</fullName>
                <default>true</default>
                <label>NOVO</label>
            </value>
            <value>
                <fullName>AGUARDANDO COMPRA FORNECEDOR</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO ENTREGA FORNECEDOR</fullName>
            </value>
            <value>
                <fullName>FINALIZADO</fullName>
            </value>
            <value>
                <fullName>RECEBIDO FORNECEDOR</fullName>
            </value>
            <value>
                <fullName>CANCELADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>