force-app/main/default/objects/Item_Requerido__c/fields/Valor_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Compra__c</fullName>
    <formula>Valor_unitario__c *  Quantidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor de Compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>