force-app/main/default/objects/Item_Requerido__c/fields/Valor_Negociado__c.field-meta.xml
<CustomField>
    <fullName>Valor_Negociado__c</fullName>
    <label>Valor Negociado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>