force-app/main/default/objects/Item_Requerido__c/fields/Valor_unitario__c.field-meta.xml
<CustomField>
    <fullName>Valor_unitario__c</fullName>
    <label>Valor unitário</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>