force-app/main/default/objects/Item_Requerido__c/recordTypes/Nacional.recordType-meta.xml
<RecordType>
    <fullName>Nacional</fullName>
    <active>true</active>
    <label>Nacional</label>
</RecordType>