force-app/main/default/objects/Item_Requerido__c/validationRules/Criacao_fora_do_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Criacao_fora_do_status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
TEXT(Requisi_o_Interna_Relacionada__r.Status_da_Requisi_o__c) != &apos;Novo&apos;,
TEXT(Requisi_o_Interna_Relacionada__r.Status_da_Requisi_o__c) != &apos;Retornado ao solicitante&apos;,
!$User.Ignorar_erros__c

)</errorConditionFormula>
    <errorMessage>Só é permitido adicionar itens em requisições com o status Novo ou Retornado ao solicitante</errorMessage>
</ValidationRule>