force-app/main/default/objects/Item_Requerido__c/validationRules/Produto.validationRule-meta.xml
<ValidationRule>
    <fullName>Produto</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISNEW(),
Produto__c = null
)</errorConditionFormula>
    <errorDisplayField>Produto__c</errorDisplayField>
    <errorMessage>Insira o produto a ser requisitado.</errorMessage>
</ValidationRule>