force-app/main/default/objects/Item_Requerido__c/validationRules/Quantidade_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantidade_0</fullName>
    <active>true</active>
    <errorConditionFormula>Quantidade__c = 0</errorConditionFormula>
    <errorDisplayField>Quantidade__c</errorDisplayField>
    <errorMessage>A quantidade não pode ser 0.</errorMessage>
</ValidationRule>