force-app/main/default/objects/Item_Requerido__c/validationRules/tipo_importacao.validationRule-meta.xml
<ValidationRule>
    <fullName>tipo_importacao</fullName>
    <active>true</active>
    <description>RecordTypeId Importação = &apos;012U4000009TQZpIAO&apos;</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Requisi_o_Interna_Relacionada__r.Tipo_de_Requisi_o__c, &apos;Importação&apos;),
 RecordType.Id != &apos;012U4000009TQZpIAO&apos;
)</errorConditionFormula>
    <errorMessage>❌O item precisa ser do tipo Importação para requisições de importação</errorMessage>
</ValidationRule>