force-app/main/default/objects/Item_Requerido__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Requisi_o_Interna_Relacionada__c</columns>
    <columns>NAME</columns>
    <columns>Produto__c</columns>
    <columns>Quantidade__c</columns>
    <columns>Categoria__c</columns>
    <columns>Status_do_Item__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>