force-app/main/default/objects/Item_Requerido__c/listViews/itens_req_dev.listView-meta.xml
<ListView>
    <fullName>itens_req_dev</fullName>
    <columns>Requisi_o_Interna_Relacionada__c</columns>
    <columns>NAME</columns>
    <columns>Produto__c</columns>
    <columns>Quantidade__c</columns>
    <columns>Categoria__c</columns>
    <columns>Status_do_Item__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gestor_Atual__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ITENS REQUERIDOS DA MINHA EQUIPE</label>
</ListView>