force-app/main/default/objects/Item_Requerido__c/listViews/Meus_Itens_Requeridos.listView-meta.xml
<ListView>
    <fullName>Meus_Itens_Requeridos</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Status_do_Item__c</columns>
    <filterScope>Mine</filterScope>
    <label>Meus Itens Requeridos</label>
</ListView>